# daniel.feldroy.com

./: .gitignore  .vale.ini  README.md  alembic.ini  converto.py  create.py  demo.py  feeds.py  fitness.csv  generating-ncx-files-with-python.md  gones.md  justfile  layouts.py  mailing_list.py  main.old.py  main.py  md_testrunner.py  models.py  next.config.js  package.json  pyproject.toml  railway.json  redirects.json  robots.txt  travels.csv  travels.py  vercel.json
components/: layout.js  layout.module.css  listing.js  metatags.js
drafts/: 2023-05-pyconit.md  2023-06-london-compared-to-los-angeles.md  2023-09-we-moved-to-london.md  vs-code-cheatsheet.md
festyles/: global.css  utils.module.css
lib/: posts.js  rss.js  tags.js
migrations/: env.py
migrations/versions/: 75a372fa9def_make_email_unique_plus_validation.py  951ec84b6878_initial.py  987ccc7d05e8_use_status_as_enum.py
pages/: _app.js  about.md  about.mdoc  books.md  ccode.md  coffee-shops.mdoc  index.js  jobs.md  jobs.mdoc  jobs.server.js  london-coffee-shops.mdoc  news.mdoc  open-source.md  places.mdoc  portfolio.md  publications.md  speaking-engagements.md  speaking.mdoc  tags.js  travels.mdoc
pages/books/: everyone-dies-sample.md  everyone-dies.md  fiction.md  tech.js  tech.md
pages/posts/: 2007-06-thought-on-methods-in-plone.md  2007-11-ria-arguments.md  2008-02-memorial-mass-for-my-uncle.md  2008-04-321-liftoff.md  2008-04-engineer-guide-to-cats.md  2008-04-so-what-did-i-do-on-website.md  2008-04-status-of-nasa-science.md  2008-05-phoenix-is-down-safely.md  2008-06-july-should-be-fun.md  2008-06-must-use-ubigraph.md  2008-06-umlizer-lives.md  2008-08-fitness-update.md  2008-10-day-1-of-2008-plone-conference.md  2008-10-day-2-of-2008-plone-conference.md  2008-11-dannys-recipe-for-pumpkin-pie.md  2008-11-subscribers-zope-3-style.md  2008-12-recap-of-2008.md  2009-01-useful-python-code-for-blogspot-users.md  2009-02-should-django-uni-form-handle.md  2009-04-nova-dug-meetup-for-wed-april-29th.md  2009-07-training-schedule.md  2010-01-my-pre-history-with-plone.md  2010-04-moving-away-from-dc.md  2010-06-my-little-unit-test-trick.md  [id].js  (+48 more)
posts/: 2011-05-i-love-this-girl.md  2022-06-18-s3-getsigned-url-nodejs-aws-sdk-3.md  2022-11-two-years-at-octopus.md  2023-01-resolutions.md  2023-04-aws-requests-auth.md  2023-04-cookiecutter-options-pattern.md  2023-04-my-fitness-journey.md  2023-06-bjj-training-tips.md  2023-06-converting-from-bleach-to-nh3.md  2023-07-visit-to-paultons-park.md  2023-08-pypi-project-urls-cheatsheet.md  2023-10-we-moved-to-london.md  2023-11-minimal-css-libraries.md  2023-11-splitting-git-commit.md  2023-11-three-years-at-kraken-tech.md  2024-01-recap-resolutions.md  2024-05-rapidly-creating-smoke-tests-for-django-views.md  2024-06-london-hackathon-on-july-1-and-2.md  2024-pycon-lithuania.md  august-2020-courses.md  blog-revamp-2021.md  get-or-create-view.md  switching-vscode-terminals.md  til-2023-09-ignoring-with-glob.md  til-2023-09-peotry-pyproject-urls.md  til-2023-09-pytest-with-breakpoints.md  til-2023-10-capture-stdout-stderr-with-pytest.md  til-2023-10-rich-console-status-for-slow-processes.md  til-2023-10-skipping-git-pre-commit.md  til-2023-11-autoloading-on-filechange-using-watchdog.md  til-2023-11-fixing-yaml.md  til-2023-12-change-older-git-commit.md  til-2023-12-forcing-pip-to-use-virtualenv.md  til-2024-01-writing-decorators-for-classes.md  til-2024-02-using-urls-to-highlight-and-scroll-to-text.md  til-2024-05-auto-setup-remote-branch-for-git.md  til-2024-05-running-uv-outside-a-virtualenv.md  til-2024-05-switching-to-full-screen-mode-in-vscode.md  til-2024-08-parsing-messy-datetimes-strings.md
public/: fitness-2024.csv  fitness.csv  render.js  robots.txt  style.css
static/: style.css
styles/: global.css
(+351 files in other folders)
